<resources>
    <string name="app_name">Malang Camp</string>
    <string name="pegawai">Pegawai</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="login_pegawai">Login Pegawai</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="logo_malang_camp">Logo Malang Camp</string>
    <string name="login">Login</string>
    <string name="belum_memiliki_akun">"Belum memiliki akun?, "</string>
    <string name="daftar">Daftar</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="username">Username</string>
    <string name="list_booking">List Booking</string>
    <string name="informasi_barang">Informasi Barang</string>
    <string name="title_activity_pegawai_home">PegawaiHomeActivity</string>
    <string name="keluar">Keluar</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="ukuran">Ukuran</string>
    <string name="nama">Nama</string>
    <string name="submit">Submit</string>
    <string name="tipe">Tipe</string>
    <string name="frame">Frame</string>
    <string name="pasak">Pasak</string>
    <string name="cancel">Cancel</string>
    <string name="tombol_gambar_untuk_menambahkan_gambar">Tombol gambar untuk menambahkan gambar</string>
    <string name="tombol_untuk_menambahkan_informasi_barang">Tombol untuk menambahkan informasi barang</string>
    <string name="sepatu">Sepatu</string>
    <string name="sleeping_bag">Sleeping Bag</string>
    <string name="jaket">Jaket</string>
    <string name="tenda">Tenda</string>
    <string name="bahan">Bahan</string>
    <string name="polar">Polar</string>
    <string name="bulu">Bulu</string>
    <string name="warna">Warna</string>
    <string name="cara_pemasangan">Cara Pemasangan</string>
    <string name="stock">Stock</string>
    <string name="rp">Rp. %1$s /Hari</string>
    <string name="rp_harga_per_hari">Rp. Harga/Hari</string>
    <string name="update">Update</string>
    <string name="gambar_barang">Gambar Barang</string>
    <string name="tombol_hapus">Tombol Hapus</string>
    <string name="title_activity_pelanggan_home">PelangganHomeActivity</string>
    <string name="barang_sewa">Barang Sewa</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="aturan_sewa">Aturan Sewa</string>
    <string name="tas">Tas</string>
    <string name="barang_lainnya">Barang Lainnya</string>
    <string name="kegunaan_barang">Kegunaan Barang</string>
    <string name="harga">Harga</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="ukuran___">Ukuran: %1$s</string>
    <string name="bahan___">Bahan: %1$s</string>
    <string name="tipe___">Tipe: %1$s</string>
    <string name="frame___">Frame: %1$s</string>
    <string name="pasak___">Pasak: %1$s</string>
    <string name="warna___">Warna: %1$s</string>
    <string name="stock___">Stock: %1$d</string>
    <string name="cara_pemasangan___">Cara Pemasangan:\n%1$s</string>
    <string name="kegunaan_barang___">Kegunaan Barang:\n%1$s</string>
    <string name="total">Total</string>
    <string name="list_barang">List Barang</string>
    <string name="cara_pembayaran">Silakan melakukan tranfer pada rekening ini Dan mengirim bukti pembayaran\n1223949679594 ( BRI )\n1234955933394 ( BCA )</string>
    <string name="sewa">Sewa</string>
    <string name="text_nama_penyewa">Nama Penyewa</string>
    <string name="text_no_telepon">No Telepon</string>
    <string name="text_bukti_pembayaran">Bukti Pembayaran</string>
    <string name="foto_bukti_pembayaran">Foto bukti pembayaran</string>
    <string name="tombol_mengambil_foto_dari_galeri">Tombol mengambil foto dari galeri</string>
    <string name="tombol_mengambil_dari_kamera">Tombol mengambil dari kamera</string>
    <string name="aturan_dan_syarat_sewa">ATURAN DAN SYARAT SEWA</string>
    <string name="aturan1">Untuk Jaminan Sewa Peminjam meninggalkan E-KTP / SIM / KTM yang BERLAKU dan JELAS (usahakan membawa 2 identitas)</string>
    <string name="aturan2">Jika Masih Pelajar Bisa Menggunakan Kartu Pelajar (malang) + Fotokopi KK</string>
    <string name="aturan3">Jika Masih Pelajar Bisa Menggunakan Kartu Pelajar (malang) + Fotokopi KK</string>
    <string name="aturan4">Jika ada kehilangan atau kerusakan maka penyewa harus mengganti sesuai barang yang di sewa</string>
    <string name="aturan5">Penyewa mengembalikan dengan kondisi lengkap, diusahakan Bersih, tidak perlu di cuci.</string>
    <string name="pemesanan_via_aplikasi">Pemesanan via Aplikasi</string>
    <string name="pemesanan1">Aplikasi Malang camp ini hanya melayani pemesanan Alat- Alat Outdoor dan barang yang Di sewa tetap di Ambil di toko Malang</string>
    <string name="pemesanan2">Aplikasi ini tidak melayani perubahan tanggal Sewa jika Ada perubahan Hari/ Tanggal harap segera Menghubungi No pegawai Via WA (WhatsApp) di bawah ini:</string>
    <string name="diambil_pada_tanggal_pada_jam">Diambil pada tanggal: __/__/____\nPada jam: 00:00</string>
    <string name="selama_hari">Selama __ Hari</string>
    <string name="pesanan">Pesanan __/__/____</string>
    <string name="terima">Terima</string>
    <string name="tolak">Tolak</string>
    <string name="riwayat">Riwayat</string>
    <string name="title_activity_peraturan_sewa">PeraturanSewaActivity</string>
    <string name="tambah_ke_keranjang">Tambah ke Keranjang</string>
    <string name="harap_foto_bukti_pembayaran_harus_jelas_jika_tidak_kemungkinan_pesanan_anda_di_tolak">HARAP FOTO BUKTI PEMBAYARAN HARUS JELAS, JIKA TIDAK KEMUNGKINAN PESANAN ANDA DI TOLAK.</string>
    <string name="NmerTlpnPegawai">+6285646547053</string>
    <string name="akun">Akun</string>
    <string name="title_rating">Beri nilai pada barang-barang yang sudah kamu sewa</string>
    <string name="tidak_terima_kasih">TIDAK, TERIMA KASIH</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="kirim">KIRIM</string>
    <string name="rate_5">%1$.1f / 5</string>
    <string name="penyewaan_telah_ditolak">Penyewaan telah diTOLAK</string>
    <string name="penyewaan_telah_diterima">Penyewaan telah diTERIMA</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="gambar_rate">Gambar Rate</string>
    <string name="delete">DELETE!</string>
    <string name="apakah_kamu_yakin_ingin_menghapus_barang">Apakah kamu yakin ingin menghapus barang </string>
    <string name="_tanda_tanya_">\?</string>
    <string name="hapus_barang_">Hapus barang %1$s</string>
    <string name="jangan_hapus_barang">Jangan hapus barang %1$s</string>
    <string name="e_mail_error">E-mail error</string>
    <string name="email_harus_diisi">Email harus diisi</string>
    <string name="email_tidak_valid">Email tidak valid</string>
    <string name="password_error">Password error</string>
    <string name="password_harus_lebih_dari6_karakter">Password harus lebih dari 6 karakter</string>
    <string name="deskbarang_error">%1$s error</string>
    <string name="deskbarang_harus_diisi">%1$s harus diisi</string>
    <string name="Diambil______">Diambil %1$s; %2$s</string>
    <string name="barang_diambil_tanggal_">"Barang diambil tanggal: "</string>
    <string name="__dan_dikembalikan_tanggal__">" dan dikembalikan tanggal: "</string>
    <string name="___pada_jam_">", pada jam "</string>
    <string name="Selama__Hari">Selama %1$s Hari</string>
    <string name="nomor_telpon_telah_disalin">Nomor Telpon telah disalin</string>
    <string name="maaf_anda_belum_terdaftar_sebagai_admin">Maaf, Anda belum terdaftar sebagai Admin</string>
    <string name="gagal_untuk_memuat_data">Gagal untuk memuat data</string>
    <string name="homepage_pegawai">Homepage Pegawai</string>
    <string name="data_kosong_di_list_booking">Data kosong di list booking</string>
    <string name="masih_belum_ada_yang_menyewa">Masih Belum Ada Yang Menyewa</string>
    <string name="data_kosong_di_list_barang">Data kosong di list barang</string>
    <string name="masih_belum_ada_barang_yang_ditambahkan">Masih Belum Ada Barang Yang Ditambahkan</string>
    <string name="barang_nama__telah_dihapus">%1$s telah dihapus</string>
    <string name="barang_id___jpg">%1$s.jpg</string>
    <string name="sukses_mengupdate">Sukses mengupdate</string>
    <string name="kembali">KEMBALI</string>
    <string name="nama_barang">Nama barang</string>
    <string name="ukuran_barang">Ukuran barang</string>
    <string name="Berbahan___">Berbahan %1$s</string>
    <string name="tipe_tenda">Tipe tenda</string>
    <string name="frame_tenda">Frame tenda</string>
    <string name="pasak_tenda">Pasak tenda</string>
    <string name="warna_barang">Warna barang</string>
    <string name="stock_barang">Stock barang</string>
    <string name="harga_barang">Harga barang</string>
    <string name="cara_untuk_memasang_tenda">Cara untuk memasang tenda</string>
    <string name="kegunaan_pada_barang">Kegunaan pada barang</string>
    <string name="berhasil_menambahkan_barang">Berhasil menambahkan barang</string>
    <string name="anda_belum_memilih_gambarnya">Anda belum memilih gambarnya</string>
    <string name="ukuran_tenda">Ukuran tenda</string>
    <string name="login_pelanggan">Login pelanggan</string>
    <string name="pelanggan_belum_terdaftar">Pelanggan belum terdaftar</string>
    <string name="daftar_sekarang">DAFTAR SEKARANG</string>
    <string name="register_pelanggan">Register pelanggan</string>
    <string name="username_error">username error</string>
    <string name="username_harus_diisi">Username harus diisi</string>
    <string name="nama_depan_error">Nama depan error</string>
    <string name="nama_depan_harus_diisi">Nama Depan harus diisi</string>
    <string name="nama_belakang_error">nama belakang error</string>
    <string name="nama_belakang_harus_diisi">Nama Belakang harus diisi</string>
    <string name="nomor_telepon_error">Nomor Telepon error</string>
    <string name="nomor_telepon_harus_diisi">Nomor Telepon harus diisi</string>
    <string name="nomor_telepon_tidak_valid">Nomor Telepon tidak valid</string>
    <string name="ulangi_password_error">ulangi password error</string>
    <string name="password_tidak_cocok">Password tidak cocok</string>
    <string name="pembuatan_akun_sukses">Pembuatan akun sukses</string>
    <string name="beri_nilai_pada_barang_barang_yang_sudah_kamu_sewa">Beri nilai pada barang-barang yang sudah kamu sewa</string>
    <string name="sangat_kurang">Sangat Kurang</string>
    <string name="kurang">Kurang</string>
    <string name="cukup">Cukup</string>
    <string name="baik">Baik</string>
    <string name="sangat_baik">Sangat Baik</string>
    <string name="belum_diberi_rating">Belum diberi rating</string>
    <string name="batalkan_pemesanan">Batalkan pemesanan</string>
    <string name="hapus_pesanan">Hapus pesanan</string>
    <string name="pesanan_anda_di_terima">"pesanan anda di terima. silakan mengambil barang sesuai dengan tanggal dan jam yang di pesan. tetap memakai masker pada saat pengambilan barang.\nHubungi nomor di bawah ini untuk informasi lebih lanjut."</string>
    <string name="pesanan_anda_tidak_bisa_kami_proses">"MAAF, PESANAN ANDA TIDAK BISA KAMI PROSES KARENA TIDAK VALID.\nHubungi nomor di bawah ini untuk informasi lebih lanjut."</string>
    <string name="pesanan_anda_belum_kami_konfirmasi">"MAAF, PESANAN ANDA BELUM KAMI KONFIRMASI. DIMOHON UNTUK MENUNGGU BEBERAPA SAAT LAGI.\nHubungi nomor di bawah ini untuk informasi lebih lanjut."</string>
    <string name="rating_barang">rating barang</string>
    <string name="isi_dengan_angka">Isi dengan angka</string>
</resources>